Closed Bug 326646 Opened 20 years ago Closed 20 years ago

"ASSERTION: no owner document" involving createDocumentType

Categories

(Core :: DOM: Core & HTML, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: dbaron)

References

Details

(Keywords: assertion, fixed1.8.1, testcase, Whiteboard: [patch])

Attachments

(2 files)

After loading the testcase, I get two of these at each GC: ###!!! ASSERTION: no owner document: 'GetOwnerDoc()', file /Users/admin/trunk/mozilla/content/base/src/nsGenericDOMDataNode.cpp, line 632
Attached file testcase
In Gecko a node is allowed to not have an ownerDocument (that's why it's GetOwnerDoc() and not OwnerDoc()). We can try to give the DOMImplementation a document (not sure which), but the assertion is bogus and nsGenericDOMDataNode::AppendReachableList should be able to deal with a null ownerDocument.
The doctype *should not* have an owner document there according to the DOM spec, so the solution here is definitely to make AppendReachableList be able to deal.
Attached patch patchSplinter Review
Assignee: general → dbaron
Status: NEW → ASSIGNED
Attachment #211398 - Flags: superreview?(peterv)
Attachment #211398 - Flags: review?(bugmail)
Attachment #211398 - Flags: superreview?(peterv) → superreview+
Fix checked in to trunk.
Blocks: 241518
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Fixed on MOZILLA_1_8_BRANCH by checkin of bug 336791.
Keywords: fixed1.8.1
Crashtest checked in.
Flags: in-testsuite+
Component: DOM: Core → DOM: Core & HTML
QA Contact: ian → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: