Remove bogus assertion.  b=326646  r=sicking  sr=peterv